WebKit incorrectly clears the alpha channel on readPixels, even for Framebuffers https://bugs.webkit.org/show_bug.cgi?id=87310

Reviewed by Kenneth Russell.

Source/WebCore:

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::getParameter): set DEPTH_BITS/STENCIL_BITS to 0 if related channels are not requested.
(WebCore::WebGLRenderingContext::readPixels): don't do the alpha value fix if the current bound is not the internal drawing buffer.

LayoutTests:

* fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias-expected.txt:
* fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias.html: synced with khronos


Canonical link: https://commits.webkit.org/105734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119014 268f45cc-cd09-0410-ab3c-d52691b4dbfc